--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,39 @@ body {
     padding:0;
 }
 
+.container-fluid {
+    padding: 7% 15px;
+    background-color: #333333;
+    color: white;
+    text-align: center;
+    border-bottom: 1.5px solid #333333;
+}
+
+.flex-content {
+    margin-top: 20px;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+h3 {
+    font-weight: 800;
+    line-height: 1.5rem;
+    text-align: center;
+}
+
+li {
+    text-decoration: none;
+    list-style: none;
+}
+
+.container {
+    padding: 15px 15px;
+    margin: 15px;
+    background-color: #f0f0f0;
+    border-radius: 5px;
+}
+
 main {
     border-top: 5px solid black;
     padding-top: 20px;
